repair bad merge

--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,15 +43,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
+    "player_markers = ['#', None, None]\n",
+    "board = ['#',' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
+    "\n",
+    "span = \"               \"\n",
+    "title = 'Tic-Tac-Toe Board      Grid Number Index Map'\n",
+    "banner = '   |   |' + span + '     |   |'\n",
+    "line = ' ' + '{}' + ' | ' + '{}' + ' | ' + '{}' + span + ' ' + '{}' + ' | ' + '{}' + ' | ' + '{}'\n",
+    "spacer = '-----------' + span + '-----------'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def display_board(board):\n",
+    "    # clear the screen\n",
+    "    clear_output()\n",
     "    \n",
-    "    pass"
+    "    print(title)\n",
+    "    print(banner)\n",
+    "    print(line.format(board[1], board[2], board[3], 1, 2, 3))\n",
+    "    print(banner)\n",
+    "    print(spacer)\n",
+    "    print(banner)\n",
+    "    print(line.format(board[4], board[5], board[6], 4, 5, 6))\n",
+    "    print(banner)\n",
+    "    print(spacer)\n",
+    "    print(banner)\n",
+    "    print(line.format(board[7], board[8], board[9], 7, 8, 9))\n",
+    "    print(banner)\n"
    ]
   },
   {
@@ -63,9 +92,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tic-Tac-Toe Board      Grid Number Index Map\n",
+      "   |   |                    |   |\n",
+      " X | O | X                1 | 2 | 3\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " O | X | O                4 | 5 | 6\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " X | O | X                7 | 8 | 9\n",
+      "   |   |                    |   |\n"
+     ]
+    }
+   ],
    "source": [
     "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
     "display_board(test_board)"
@@ -80,13 +128,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_input():\n",
+    "def player_input(player_markers):\n",
+    "    marker = '@'\n",
+    "    marker_types = ('X', 'O')\n",
+    "    while marker not in marker_types:\n",
+    "        marker = input('Player 1: Do you want to be X or O? ').upper()\n",
+    "        if marker not in marker_types:\n",
+    "            print('Invalid Entry!')\n",
+    "        else:\n",
+    "            print(f'Player 1: Marker is {marker}')\n",
+    "            print( '---------------------')\n",
     "    \n",
-    "    pass"
+    "    # set player markers\n",
+    "    player_markers[1] = marker\n",
+    "    if player_markers[1] == 'X':\n",
+    "        player_markers[2] = '0'\n",
+    "    else:\n",
+    "        player_markers[2] = 'X'\n",
+    "                \n",
+    "    return player_markers\n",
+    "        "
    ]
   },
   {
@@ -98,11 +163,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1: Do you want to be X or O? X\n",
+      "Player 1: Marker is X\n",
+      "---------------------\n",
+      "Player1 is: X\n",
+      "Player2 is: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "player_input()"
+    "player_markers = player_input(player_markers)\n",
+    "print(f'Player1 is: {player_markers[1]}')\n",
+    "print(f'Player2 is: {player_markers[2]}')"
    ]
   },
   {
@@ -114,13 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
-    "    \n",
-    "    pass"
+    "    board[position] = marker\n",
+    "    display_board(board)\n",
+    "    return board\n"
    ]
   },
   {
@@ -132,9 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tic-Tac-Toe Board      Grid Number Index Map\n",
+      "   |   |                    |   |\n",
+      " X | O | X                1 | 2 | 3\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " O | X | O                4 | 5 | 6\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " X | $ | X                7 | 8 | 9\n",
+      "   |   |                    |   |\n"
+     ]
+    }
+   ],
    "source": [
     "place_marker(test_board,'$',8)\n",
     "display_board(test_board)"
@@ -149,13 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def win_check(board, mark):\n",
-    "    \n",
-    "    pass"
+    "    winlist = [(1, 2, 3), (4, 5, 6), (7, 8, 9), (1, 4, 7), (2, 5, 8), (3, 6, 9), (1, 5, 9), (3, 5, 7)]\n",
+    "    for item in winlist:\n",
+    "        if board[item[0]] == mark and board[item[1]] == mark and board[item[2]] == mark:\n",
+    "            print('We have a winnner!!!')\n",
+    "            print(item)\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -167,10 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have a winnner!!!\n",
+      "(1, 5, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Test Step 4\n",
     "win_check(test_board,'X')"
    ]
   },
@@ -183,14 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "def choose_first():\n",
-    "    pass"
+    "    print('Randomly selecting who goes first...')\n",
+    "    return random.randint(1, 2)"
    ]
   },
   {
@@ -202,13 +327,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
-    "    \n",
-    "    pass"
+    "    return board[position] == ' '\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test step 6\n",
+    "test_board = ['#','X','O',' ','O','X','O','X','O','X']\n",
+    "space_check(test_board, 3)\n"
    ]
   },
   {
@@ -220,13 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
-    "    \n",
-    "    pass"
+    "    for i in range(1,10):\n",
+    "        if board[i] == ' ':\n",
+    "            return False\n",
+    "    print('We have a stalemate!')\n",
+    "    return True\n"
    ]
   },
   {
@@ -238,13 +387,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
-    "    \n",
-    "    pass"
+    "    valid_positions = list(range(1,10))\n",
+    "    position = 0\n",
+    "    while position not in valid_positions:\n",
+    "        position = int(input('Choose your next position: (1-9) '))\n",
+    "        if position not in valid_positions:\n",
+    "            print('Invalid Entry!')\n",
+    "            continue\n",
+    "        if not space_check(board, position):\n",
+    "            print('Position not Available!')\n",
+    "            position = 0\n",
+    "            continue\n",
+    "            \n",
+    "    return position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose your next position: (1-9) 2\n",
+      "Position not Available!\n",
+      "Choose your next position: (1-9) 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test Step 8\n",
+    "test_board = ['#','X','O',' ','O','X','O','X','O','X']\n",
+    "player_choice(test_board)"
    ]
   },
   {
@@ -256,13 +447,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
-    "    \n",
-    "    pass"
+    "    return input('Do you want to play again? Enter Yes or No: ').lower().startswith('y')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you want to play again? Enter Yes or No: N\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test replay\n",
+    "replay()"
    ]
   },
   {
@@ -278,24 +496,78 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tic-Tac-Toe Board      Grid Number Index Map\n",
+      "   |   |                    |   |\n",
+      " X | X | 0                1 | 2 | 3\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " 0 | 0 | X                4 | 5 | 6\n",
+      "   |   |                    |   |\n",
+      "-----------               -----------\n",
+      "   |   |                    |   |\n",
+      " X | 0 |                  7 | 8 | 9\n",
+      "   |   |                    |   |\n",
+      "\n",
+      "Player 2\n"
+     ]
+    }
+   ],
    "source": [
     "print('Welcome to Tic Tac Toe!')\n",
+    "game_off = False\n",
     "\n",
-    "#while True:\n",
+    "while game_off == False:\n",
+    "    # set defaults\n",
+    "    board = ['#',' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
+    "    winner = False\n",
+    "    stalemate = False\n",
+    "   \n",
+    "    # player 1 picks marker\n",
+    "    player_input(player_markers)\n",
+    "   \n",
     "    # Set the game up here\n",
-    "    #pass\n",
+    "    display_board(board)\n",
     "\n",
-    "    #while game_on:\n",
-    "        #Player 1 Turn\n",
+    "    # pick who goes first\n",
+    "    turn = choose_first()\n",
+    "    \n",
+    "    game_on = True\n",
+    "    while game_on:\n",
+    "        marker = player_markers[turn]\n",
+    "        print(f'\\nPlayer {turn}')\n",
     "        \n",
+    "        # get players position choice and place it\n",
+    "        position = player_choice(board)\n",
+    "        if position:\n",
+    "            place_marker(board, marker, position)\n",
     "        \n",
-    "        # Player2's turn.\n",
-    "            \n",
-    "            #pass\n",
-    "\n",
-    "    #if not replay():\n",
-    "        #break"
+    "        # do we have a winner\n",
+    "        winner = win_check(board, marker)\n",
+    "        if winner:\n",
+    "            print(f'Congratulations Player {turn}')\n",
+    "            if not replay():\n",
+    "                game_off = True\n",
+    "                break\n",
+    "        \n",
+    "        # check for stalemate\n",
+    "        stalemate = full_board_check(board)\n",
+    "        if stalemate:\n",
+    "            if not replay():\n",
+    "                game_off = True\n",
+    "                break\n",
+    "        \n",
+    "        # switch turns\n",
+    "        if turn == 1:\n",
+    "            turn = 2\n",
+    "        else:\n",
+    "            turn = 1\n",
+    "    "
    ]
   },
   {
@@ -324,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
