resore my work from master merge overwrite

--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -14,26 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "def vol(rad):\n",
-    "    pass"
+    "    return (4/3) * (math.pi) * (rad ** 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.510321638291124"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,25 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num > low and num < high:\n",
+    "        return f'{num} is in the range between {low} and {high}'\n",
+    "    else:\n",
+    "        return f'{num} is **NOT** in the range between {low} and {high}'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'5 is in the range between 2 and 7'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -88,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return num > low and num < high"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +114,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,26 +142,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def up_low(s):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "4\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'Hello Mr. Rogers, how are you this fine Tuesday?'\n",
+    "x = \n",
+    "y = \n",
+    "print(x)\n",
+    "print(y)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def up_low(s):\n",
+    "    upper = len(list(filter(lambda n: n == True, [a.isupper() for a in s])))\n",
+    "    lower = len(list(filter(lambda n: n == True, [a.islower() for a in s])))\n",
+    "    print('Original String :  {s}')\n",
+    "    print(f'No. of Upper case characters :  {upper:3d}')\n",
+    "    print(f'No. of Lower case Characters :  {lower:3d}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original String :  {s}\n",
+      "No. of Upper case characters :    4\n",
+      "No. of Lower case Characters :   33\n"
      ]
     }
    ],
@@ -176,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +230,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def multiply(numbers):  \n",
-    "    pass"
+    "def multiply(numbers):\n",
+    "    x = 1\n",
+    "    for num in numbers:\n",
+    "        x *= num\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +274,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,17 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    return s == s[::-1]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +315,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,19 +341,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    alphabet_list = [a for a in alphabet]\n",
+    "    \n",
+    "    def in_alpha_list(char):\n",
+    "        if char in alphabet_list:\n",
+    "            return char\n",
+    "    \n",
+    "    mystring_list = sorted(filter(in_alpha_list, set([a.lower() for a in str1])))\n",
+    "    return alphabet_list == mystring_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +369,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
