--- a/04-Milestone Project - 1/01-Milestone Project 1 - Assignment.ipynb
+++ b/04-Milestone Project - 1/01-Milestone Project 1 - Assignment.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1,10))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
