--- a/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -13,25 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cmath import sqrt\n",
     "class Line:\n",
     "    \n",
-    "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "    def __init__(self, coor1, coor2):\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
+    "        self.x1, self.y1 = self.coor1\n",
+    "        self.x2, self.y2 = self.coor2\n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return ((self.x2 - self.x1)**2 + (self.y2 - self.y1)**2)**.5\n",
+    "                \n",
     "    def slope(self):\n",
-    "        pass"
+    "        return (self.y2 - self.y1) / (self.x2 - self.x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +58,7 @@
        "9.433981132056603"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -74,13 +78,33 @@
        "1.6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "li.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4**.5"
    ]
   },
   {
@@ -100,25 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cylinder:\n",
     "    \n",
+    "    PI = 3.14\n",
+    "    \n",
     "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
+    "        self.height = height\n",
+    "        self.radius = radius\n",
     "        \n",
     "    def volume(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return Cylinder.PI * (self.radius ** 2) * self.height\n",
+    "            \n",
     "    def surface_area(self):\n",
-    "        pass"
+    "        return 2 * Cylinder.PI * self.radius * (self.height + self.radius)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +164,7 @@
        "56.52"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +184,7 @@
        "94.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +192,13 @@
    "source": [
     "c.surface_area()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
