ran locally and created new snapshots

--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1: Do you want to be X or O? X\n",
+      "Player 1: Do you want to be X or O? x\n",
       "Player 1: Marker is X\n",
       "---------------------\n",
       "Player1 is: X\n",
@@ -418,6 +418,8 @@
      "text": [
       "Choose your next position: (1-9) 2\n",
       "Position not Available!\n",
+      "Choose your next position: (1-9) 2\n",
+      "Position not Available!\n",
       "Choose your next position: (1-9) 3\n"
      ]
     },
@@ -464,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to play again? Enter Yes or No: N\n"
+      "Do you want to play again? Enter Yes or No: n\n"
      ]
     },
     {
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -503,18 +505,20 @@
      "text": [
       "Tic-Tac-Toe Board      Grid Number Index Map\n",
       "   |   |                    |   |\n",
-      " X | X | 0                1 | 2 | 3\n",
+      " 0 | X | 0                1 | 2 | 3\n",
       "   |   |                    |   |\n",
       "-----------               -----------\n",
       "   |   |                    |   |\n",
-      " 0 | 0 | X                4 | 5 | 6\n",
+      " X | 0 | X                4 | 5 | 6\n",
       "   |   |                    |   |\n",
       "-----------               -----------\n",
       "   |   |                    |   |\n",
-      " X | 0 |                  7 | 8 | 9\n",
+      " 0 |   |                  7 | 8 | 9\n",
       "   |   |                    |   |\n",
-      "\n",
-      "Player 2\n"
+      "We have a winnner!!!\n",
+      "(3, 5, 7)\n",
+      "Congratulations Player 2\n",
+      "Do you want to play again? Enter Yes or No: n\n"
      ]
     }
    ],
