--- a/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Four of Diamonds, Two of Hearts, Seven of Hearts, King of Hearts, King of Diamonds, Three of Hearts, Two of Spades, Queen of Hearts, Ace of Diamonds, Seven of Clubs, Seven of Spades, Four of Hearts, Four of Spades, Nine of Clubs, Nine of Spades, Three of Spades, Queen of Diamonds, Ten of Spades, Ace of Spades, Six of Spades, Nine of Diamonds, Ace of Hearts, Seven of Diamonds, Four of Clubs, Jack of Hearts, Ace of Clubs, Three of Diamonds, Eight of Spades, Eight of Hearts, Three of Clubs, Five of Hearts, Eight of Clubs, Six of Hearts, Queen of Clubs, Six of Diamonds, Two of Clubs, Ten of Hearts, Ten of Clubs, King of Clubs, Jack of Clubs, Jack of Spades, King of Spades, Queen of Spades, Five of Clubs, Eight of Diamonds, Five of Diamonds, Jack of Diamonds, Nine of Hearts, Ten of Diamonds, Two of Diamonds, Five of Spades, Six of Clubs, \n"
+      "Two of Diamonds, Five of Hearts, Ten of Spades, Three of Hearts, Seven of Spades, Eight of Hearts, Ten of Diamonds, Six of Spades, Ace of Clubs, Five of Diamonds, Seven of Clubs, Three of Diamonds, Four of Hearts, Five of Clubs, Ten of Hearts, Six of Clubs, Seven of Hearts, Nine of Hearts, Five of Spades, Ten of Clubs, Three of Spades, Two of Clubs, Nine of Spades, Queen of Clubs, Jack of Clubs, Two of Spades, Four of Diamonds, Queen of Diamonds, King of Diamonds, Ace of Diamonds, Three of Clubs, Eight of Diamonds, Eight of Spades, Four of Spades, Seven of Diamonds, Ace of Spades, Nine of Diamonds, Ace of Hearts, Six of Hearts, Queen of Hearts, Six of Diamonds, King of Clubs, King of Spades, Nine of Clubs, Eight of Clubs, Queen of Spades, Jack of Spades, Two of Hearts, Four of Clubs, Jack of Hearts, King of Hearts, Jack of Diamonds, \n"
      ]
     }
    ],
@@ -241,8 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Four of Spades, Jack of Spades, Ace of Clubs, Ten of Diamonds, Queen of Hearts, Six of Diamonds, Seven of Diamonds, Two of Hearts, Six of Spades, Eight of Diamonds, Nine of Spades, Ace of Hearts, Two of Diamonds, Three of Hearts, Queen of Diamonds, Ace of Spades, Ten of Spades, Four of Diamonds, King of Diamonds, Queen of Spades, Six of Clubs, Nine of Clubs, Three of Spades, Seven of Spades, Four of Clubs, King of Clubs, Eight of Clubs, Two of Spades, Eight of Hearts, Nine of Hearts, Ten of Clubs, Two of Clubs, Ten of Hearts, Nine of Diamonds, Five of Spades, Seven of Clubs, Jack of Hearts, Queen of Clubs, Three of Diamonds, King of Hearts, Seven of Hearts, Eight of Spades, Jack of Clubs, Jack of Diamonds, Five of Diamonds, Five of Clubs, Three of Clubs, Five of Hearts, Six of Hearts, Four of Hearts, Ace of Diamonds, \n",
-      "King of Spades, \n"
+      "Nine of Clubs, Nine of Hearts, Eight of Clubs, Queen of Spades, Ten of Diamonds, Five of Clubs, Seven of Diamonds, Five of Spades, Three of Hearts, Seven of Clubs, Three of Clubs, Three of Spades, King of Spades, Two of Spades, Six of Spades, Queen of Clubs, Jack of Hearts, Three of Diamonds, Ten of Spades, Two of Diamonds, Jack of Clubs, Six of Diamonds, Four of Hearts, Two of Hearts, King of Diamonds, Ace of Clubs, Ace of Spades, Seven of Hearts, Queen of Hearts, Four of Diamonds, Six of Clubs, Ten of Hearts, Six of Hearts, Two of Clubs, Jack of Diamonds, Four of Spades, Ace of Hearts, Queen of Diamonds, King of Clubs, Five of Hearts, Eight of Diamonds, Eight of Hearts, Four of Clubs, King of Hearts, Five of Diamonds, Nine of Diamonds, Eight of Spades, Ace of Diamonds, Jack of Spades, Seven of Spades, Ten of Clubs, \n",
+      "Nine of Spades, \n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Three of Spades\n"
+      "Ace of Diamonds\n"
      ]
     }
    ],
@@ -600,7 +600,9 @@
      "output_type": "stream",
      "text": [
       "Hand Value(s):\n",
-      "BUST! Value: 26\n"
+      "['Four of Clubs', 'Four of Spades', 'Ace of Hearts'] Value: 9\n",
+      "['Four of Clubs', 'Four of Spades', 'Ace of Hearts'] Value: 19\n",
+      "\n"
      ]
     }
    ],
@@ -660,10 +662,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter 1|h|H|Hit|hit|HIT or 2|s|S|Stand|stand|STAND: 1\n",
+      "Player Hits\n",
       "Enter 1|h|H|Hit|hit|HIT or 2|s|S|Stand|stand|STAND: 2\n",
-      "Player Stands\n",
-      "Enter 1|h|H|Hit|hit|HIT or 2|s|S|Stand|stand|STAND: 3\n",
-      "Error! in hit or stand\n"
+      "Player Stands\n"
      ]
     }
    ],
@@ -715,10 +717,10 @@
       "\n",
       "Dealers Cards:\n",
       "**1st Card Hidden**\n",
-      "Three of Diamonds\n",
+      "Jack of Hearts\n",
       "\n",
       "Players Cards:\n",
-      "['King of Clubs', 'Three of Diamonds'] Value: 13\n",
+      "['Four of Diamonds', 'Jack of Hearts'] Value: 14\n",
       "\n"
      ]
     }
@@ -762,10 +764,10 @@
      "text": [
       "\n",
       "Dealers Cards:\n",
-      "['King of Diamonds', 'Ten of Spades'] Value: 20\n",
+      "['Six of Diamonds', 'Four of Diamonds'] Value: 10\n",
       "\n",
       "Players Cards:\n",
-      "['King of Diamonds', 'Ten of Spades'] Value: 20\n",
+      "['Six of Diamonds', 'Four of Diamonds'] Value: 10\n",
       "\n"
      ]
     }
@@ -850,41 +852,31 @@
       "\n",
       "Dealers Cards:\n",
       "**1st Card Hidden**\n",
-      "Five of Diamonds\n",
+      "King of Hearts\n",
       "\n",
       "Players Cards:\n",
-      "['Three of Diamonds', 'Four of Clubs'] Value: 7\n",
-      "\n",
-      "Enter 1|h|H|Hit|hit|HIT or 2|s|S|Stand|stand|STAND: 1\n",
-      "Player Hits\n",
-      "\n",
-      "Dealers Cards:\n",
-      "**1st Card Hidden**\n",
-      "Five of Diamonds\n",
-      "\n",
-      "Players Cards:\n",
-      "['Three of Diamonds', 'Four of Clubs', 'King of Hearts'] Value: 17\n",
+      "['Ten of Clubs', 'Nine of Clubs'] Value: 19\n",
       "\n",
       "Enter 1|h|H|Hit|hit|HIT or 2|s|S|Stand|stand|STAND: 2\n",
       "Player Stands\n",
       "\n",
       "Dealers Cards:\n",
       "**1st Card Hidden**\n",
-      "Five of Diamonds\n",
+      "King of Hearts\n",
       "\n",
       "Players Cards:\n",
-      "['Three of Diamonds', 'Four of Clubs', 'King of Hearts'] Value: 17\n",
+      "['Ten of Clubs', 'Nine of Clubs'] Value: 19\n",
       "\n",
       "\n",
       "Dealers Cards:\n",
-      "['Three of Clubs', 'Five of Diamonds', 'Eight of Clubs', 'Two of Clubs'] Value: 18\n",
+      "['Eight of Spades', 'King of Hearts'] Value: 18\n",
       "\n",
       "Players Cards:\n",
-      "['Three of Diamonds', 'Four of Clubs', 'King of Hearts'] Value: 17\n",
+      "['Ten of Clubs', 'Nine of Clubs'] Value: 19\n",
       "\n",
-      "Chips Total: 50\n",
-      "Dealer Wins!\n",
-      "Chips Total: 50\n",
+      "Chips Total: 150\n",
+      "Player Wins!\n",
+      "Chips Total: 150\n",
       "Do you want to play again? Enter Yes or No: n\n"
      ]
     }
